# dharmiq

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  celery_app.py  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector.py  002_users_and_chat.py  003_document_chunks_pgvector.py  004_user_uploads.py  005_chat_requests.py  006_eval_tables.py  007_v02_text_events_attachments.py  008_v02_retrieval.py  009_chat_event_citation.py  010_system_message_role.py  011_v04_foundation.py  012_v06_corpus_temporal.py
backend/dharmiq/: __init__.py  __main__.py  main.py  redis_client.py
backend/dharmiq/agents/: __init__.py  checkpoint.py  citation_metadata.py  citation_validation.py  graph.py  messages.py  progress.py  runner.py  runtime.py  state.py  streaming.py  text_utils.py
backend/dharmiq/api/: dependencies.py
backend/dharmiq/auth/: __init__.py  manager.py
backend/dharmiq/config/: __init__.py  settings.py
backend/dharmiq/core/: __init__.py  errors.py  logging.py  security.py
backend/dharmiq/corpus/: footnote.py  indexed_at.py
backend/dharmiq/db/: session.py  types.py
backend/dharmiq/documents/: __init__.py  chunks.py
backend/dharmiq/eval/: __init__.py  baseline.py  cli.py  compare.py  dataset_format.md  dataset_loader.py  expectations.py  judge.py  metadata.py  recall.py  revised_law.py  runner.py  suite.py
backend/dharmiq/guardrails/: __init__.py  input_validator.py  rate_limiter.py
backend/dharmiq/ingestion/: __init__.py  chunker.py  context_text.py  ocr.py  parser.py  pipeline.py  relationships.py  scanner.py  storage.py  tokens.py  upload_pipeline.py
backend/dharmiq/llm/: __init__.py  embeddings.py  litellm_service.py  openrouter_client.py  pipeline.py  retrieval.py  usage.py
backend/dharmiq/observability/: __init__.py  metrics.py  middleware.py  (+1 more)
backend/tests/: conftest.py  corpus_helpers.py  litellm_helpers.py  rerank_helpers.py  test_account_privacy.py  test_adapt_grahak_nyay.py  test_agent_graph.py  test_agent_hygiene.py  test_agents_retrieval.py  test_allowlist_v06.py  test_auth.py  test_bhashabench_sample.py  test_build_manifest.py  test_chat.py  test_chat_pipeline.py  test_chat_recovery.py  test_chat_stream.py  test_chunker.py  test_citation_enricher.py  test_corpus_footnote.py  test_corpus_index_p3.py  test_docs.py  test_document_chunks.py  test_embeddings.py  test_eval_compare.py  test_eval_dataset_loader.py  test_eval_expectations.py  test_eval_metadata.py  test_eval_recall.py  test_eval_runner.py  test_eval_suite.py  test_eval_suite_v06.py  test_feedback.py  test_health.py  test_hybrid_retrieval.py  test_idempotency.py  test_ingestion_pipeline.py  test_ingestion_temporal.py  test_input_guard.py  test_litellm_service.py  (+20 more)
docs/: plan.md  (+3 more)
(+201 files in other folders)
