[project]
name = "dharmiq"
version = "0.1.0"
description = "Open-source Indian legal information assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.0",
    "fastapi[standard]>=0.135.0",
    "pydantic>=2.10.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
dharmiq-api = "dharmiq.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dharmiq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
