[project]
name = "dharmiq"
version = "0.4.0"
description = "Open-source Indian legal information assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0,<0.4.0",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "pgvector>=0.3.6",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "psycopg[binary]>=3.2.0",
    "datasets>=3.2.0",
    "langchain-openai>=0.3.0",
    "prometheus-client>=0.21.0",
    "ragas>=0.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "sentence-transformers>=3.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.34.0",
    "litellm~=1.60",
    "langgraph~=0.6.0",
    "langgraph-checkpoint-postgres~=2.0.0",
    "python-docx~=1.1",
    "markdown-it-py~=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "flower>=2.0.0",
]

[project.scripts]
dharmiq-api = "dharmiq.main:run"
dharmiq-eval = "dharmiq.eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dharmiq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: downloads or runs heavyweight models",
]

[dependency-groups]
dev = [
    "flower>=2.0.1",
    "pytest-timeout>=2.4.0",
]
